--- a/JavaXMLProject/src/GraphicPackage/AuthentificationPane.form
+++ b/JavaXMLProject/src/GraphicPackage/AuthentificationPane.form
@@ -127,6 +127,9 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="ANNULLA"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="cancelButtonActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="okButton">
           <Properties>
